[package]
name = "aabb-tree"
version = "0.1.1"
authors = ["Lucas Bittencourt de Souza <lbittencs@gmail.com>"]
license = "MIT"
repository = "https://github.com/lukebitts/aabb-tree"
documentation = "https://lukebitts.github.io/docs/aabb-tree/aabb_tree"
description = """
This crate is the implementation of a dynamic bounding volume tree based on
axis aligned bounding boxes. It is a spatial structure with support for
querying objects based on their position and size inside the tree.
This work is based on Presson's `btDbvt` written for Bullet Physics and
Catto's `b2DynamicTree` written for Box2D.
"""
categories = ["aabb", "tree", "spatial"]

#[profile.release]
#debug = true

[features]
#default = ["test_tools"]
default = []
test_tools = [ "clippy", "quickcheck", "quickcheck_macros" ]

[dependencies]
num = {version = "0.1", default-features = false}
rand = "0.3"
clippy = {version = "*", optional = true}
quickcheck = {version="*", optional = true}
quickcheck_macros = {version = "*", optional = true}
#specs = "0.9"
statrs = "*"
noisy_float = "0.1.2"

[[example]]
name = "collisions"

[dev-dependencies]
rand = "0.3"
glm = "0.2.3"
piston_window = "*"
chrono = "0.2"
